# chalenges

./: .dockerignore  .gitignore  CHALENGE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  requirements.txt
model_serve/: README.md  pyproject.toml
model_serve/src/neural_api/: __main__.py  config.py  gateway.py  requirements.txt
models/: README.md  pyproject.toml
models/src/neural_network/: __main__.py  class_names.json  config.py  dataset.py  model.py  notebook_neurals.ipynb  predictor.py  test_predict.py  trainer.py
shared/: README.md  pyproject.toml
shared/src/shared/: __init__.py  rq.py  settings.py  weather_last7days.json
sohoo/: README.md  pyproject.toml
sohoo/src/sohoo/: __main__.py  list_country.py  provider.py  visualize.py
